# steam-screenshot-importer

./: .gitignore  .prettierignore  .prettierrc  README.md  cliff.toml  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.js  tsconfig.json  update.json  vite.config.ts
.github/workflows/: release.yml
.zed/: settings.json
pkg/arch/: PKGBUILD
public/: global.css  index.html
scripts/: fetch-steamworks.mjs
src/: About.svelte  App.svelte  DarkToggle.svelte  Footer.svelte  GameTile.svelte  Header.svelte  Home.svelte  ImgLink.svelte  ImportErrorList.svelte  Menu.svelte  NavButton.svelte  Settings.svelte  bindings.ts  example-games.ts  example-mode.ts  global.d.ts  main.ts  persisted.svelte.ts  screenshots.js  screenshots.ts  settings.store.svelte.ts  stores.js  stores.svelte.ts  types.ts  updater.js  updater.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json  template.desktop
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: app_dirs.rs  file_picker.rs  image_fetch.rs  image_import.rs  main.rs  steam.rs  steam_locate.rs
src-tauri/tools/steamworks-fetcher/: Cargo.toml
src-tauri/tools/steamworks-fetcher/src/: main.rs
tests/: screenshots.spec.ts
vite/: example-fixtures.ts
