[package]
name = "steam-screenshot-importer"
version = "0.1.0"
description = "Steam Screenshot Importer"
authors = ["yobson"]
license = "GPL-3.0"
repository = "https://github.com/yobson1/steam-screenshot-importer"
default-run = "steam-screenshot-importer"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-opener = "2"
steamlocate = "1.2"
base64 = "0.13.0"
steamy-vdf = "0.2.0"
steamworks = { version = "0.11", features = ["raw-bindings"] }
image = { version = "0.25.8", features = ["avif-native"] }
directories = "6.0.0"
log = "0.4.18"
simple_logger = "5.0.0"
lazy_static = "1.5"
rayon = "1.10"
atomic_float = "1.1.0"
rfd = "0.17"

[target."cfg(target_os = \"linux\")".dependencies.tauri]
version = "2"
features = ["cef"]
default-features = false

[target."cfg(not(target_os = \"linux\"))".dependencies.tauri]
version = "2"
features = ["cef"]

[patch.crates-io.tauri]
git = "https://github.com/tauri-apps/tauri"
branch = "feat/cef"

[patch.crates-io.tauri-build]
git = "https://github.com/tauri-apps/tauri"
branch = "feat/cef"

[patch.crates-io.tauri-plugin]
git = "https://github.com/tauri-apps/tauri"
branch = "feat/cef"

[patch.crates-io.tauri-plugin-opener]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "feat/cef"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
