[package]
name = "steam-screenshot-importer"
version = "0.4.1"
description = "Steam Screenshot Importer"
authors = ["yobson"]
license = "GPL-3.0-only"
repository = "https://github.com/yobson1/steam-screenshot-importer"
default-run = "steam-screenshot-importer"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
steamlocate = "2.1"
base64 = "0.22"
steamy-vdf = "0.2"
steamworks = { version = "0.13", features = ["raw-bindings"] }
image = { version = "0.25", features = ["avif-native"] }
directories = "6.0"
log = "0.4"
simple_logger = "5.2"
lazy_static = "1.5"
rayon = "1.12"
atomic_float = "1.1"
rfd = "0.17"
walkdir = "2.5"
reqwest = { version = "0.13", features = ["json", "query"] }

[target."cfg(target_os = \"linux\")".dependencies.tauri]
git = "https://github.com/tauri-apps/tauri"
branch = "feat/cef"
default-features = false
features = []

[target."cfg(not(target_os = \"linux\"))".dependencies.tauri]
git = "https://github.com/tauri-apps/tauri"
branch = "feat/cef"
default-features = true
features = []

[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-plugin = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
cef = ["tauri/cef"]
